@@ -3,3 +3,6 @@ Changes since V0.9
 
   *) Ask gpg to use fast randomness during testing.
      [Daniel Kahn Gillmor <dkg@fifthhorseman.net> and Ben Laurie]
+
+  *) Add distclean make target.
+     [Daniel Kahn Gillmor <dkg@fifthhorseman.net>]
